# socpp

./: CMakeLists.txt  README.md
include/socpp/: socket.hpp  socpp.hpp
src/: socket.cpp
tests/: test_lifecycle.cpp  test_read-write.cpp
